--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,11 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '>=1.18.0'
+          go-version: '>=1.19.0'
 
       - run: go mod download
 
-      - run: go install github.com/swaggo/swag/cmd/swag@latest
+      - run: go install github.com/swaggo/swag/cmd/swag@v1.8.4
 
       - run: make swdoc
 
